# CapIt

./: .gitignore  CMakeLists.txt  main.cpp
framework/include/: controller.hpp  i_multimedia_centre.hpp  i_screenshot_maker.hpp  simple_png.hpp  x11_multimedia_centre.hpp  x11_screenshot_maker.hpp
framework/src/: controller.cpp  simple_png.cpp  x11_multimedia_centre.cpp  x11_screenshot_maker.cpp
